--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,8 @@
       line-height: 5em; font-weight: bold; color: #efefef; font-size: 20px;
     }
     .app-name__loader::before {
-      content: 'MineAdmin';
+      /*content: 'MineAdmin';*/
+      content: '云车通信息平台';
     }
     .app-animate__loader {
       color: #fff;
